setframerange and publishing
rolled out setframerange update that includes the ability to set the frame range in your scene file either at cut length or handle length.  Also, introduced an new publishing mechanism that enables selection set publishing on the shot level.

--- a/core/templates.yml
+++ b/core/templates.yml
@@ -212,13 +212,13 @@ paths:
     shot_alembic_cache:
         definition: '@shot_publish_root/caches/@generic_shot_version_name.abc'
     shot_multi_cache:
-        definition: '@shot_publish_root/caches/{ftype}/{Shot}_{task_name}-{name}-{abcset_name}_v{version}.{ext}'
+        definition: '@shot_publish_root/caches/{Shot}_{task_name}-{name}-{abcset_name}_v{version}.{ext}'
 
     # Asset level alembic caches
     asset_alembic_cache:
         definition: '@asset_publish_root/caches/@generic_asset_version_name.abc'
     asset_multi_cache:
-        definition: '@asset_publish_root/caches/{ftype}/{Asset}_{task_name}-{name}-{abcset_name}_v{version}.{ext}'
+        definition: '@asset_publish_root/caches/{Asset}_{task_name}-{name}-{abcset_name}_v{version}.{ext}'
 
     ##########################################################################################
     # Shot level paths
