--- a/env/includes/settings/tk-multi-publish2.yml
+++ b/env/includes/settings/tk-multi-publish2.yml
@@ -194,24 +194,45 @@ settings.tk-multi-publish2.maya.asset_step:
   location: "@apps.tk-multi-publish2.location"
 
 # shot step
-settings.tk-multi-publish2.maya.shot_step:
-  collector: "{self}/collector.py:{engine}/tk-multi-publish2/basic/collector.py"
+settings.tk-multi-publish2.maya.shot_step.scene:
+  display_name: Publish Scene Only
+  collector: "{self}/collector.py:{config}/tk-multi-publish2/maya/collector.py"
   collector_settings:
       Work Template: maya_shot_work
   publish_plugins:
-  - name: Publish to ShotGrid
+  - name: Publish to Shotgun
     hook: "{self}/publish_file.py"
-    settings: {}
-  - name: Upload for review
-    hook: "{self}/upload_version.py"
     settings: {}
   - name: Begin file versioning
     hook: "{engine}/tk-multi-publish2/basic/start_version_control.py"
     settings: {}
-  - name: Publish to ShotGrid
+  - name: Publish to Shotgun
     hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_session.py"
     settings:
         Publish Template: maya_shot_publish
+  help_url: *help_url
+  location: "@apps.tk-multi-publish2.location"
+
+settings.tk-multi-publish2.maya.shot_step.alembic:
+  display_name: Publish Alembic
+  collector: "{self}/collector.py:{config}/tk-multi-publish2/maya/abc_collector.py"
+  collector_settings:
+      Work Template: maya_shot_work
+  publish_plugins:
+  - name: Publish to Shotgun
+    hook: "{self}/publish_file.py"
+    settings: {}
+  - name: Begin file versioning
+    hook: "{engine}/tk-multi-publish2/basic/start_version_control.py"
+    settings: {}
+  - name: Publish to Shotgun
+    hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_session.py"
+    settings:
+        Publish Template: maya_shot_publish
+  - name: Publish to Shotgun
+    hook: "{self}/publish_file.py:{config}/tk-multi-publish2/maya/publish_session_geometry.py"
+    settings:
+        Publish Template: shot_multi_cache
   help_url: *help_url
   location: "@apps.tk-multi-publish2.location"
 
