--- a/env/includes/engine_locations.yml
+++ b/env/includes/engine_locations.yml
@@ -54,6 +54,10 @@ engines.tk-maya.location:
   type: app_store
   name: tk-maya
   version: v0.11.4
+engines.tk-blender.location:
+  type: git
+  path: https://github.com/c1112/tk-blender.git
+  version: v1.1.6
 engines.tk-motionbuilder.location:
   type: app_store
   name: tk-motionbuilder
