--- a/env/includes/settings/tk-multi-breakdown.yml
+++ b/env/includes/settings/tk-multi-breakdown.yml
@@ -20,6 +20,11 @@ settings.tk-multi-breakdown.nukestudio:
   hook_scene_operations: '{self}/tk-nuke_scene_operations.py'
   location: "@apps.tk-multi-breakdown.location"
 
+# Blender
+settings.tk-multi-breakdown.blender:
+  hook_scene_operations: '{engine}/tk-multi-breakdown/tk-blender_scene_operations.py'
+  location: "@apps.tk-multi-breakdown.location"
+
 # alias
 settings.tk-multi-breakdown.alias:
   hook_scene_operations: '{engine}/tk-multi-breakdown/basic/scene_operations.py'
