--- a/env/shot.yml
+++ b/env/shot.yml
@@ -27,6 +27,7 @@ includes:
 - ./includes/settings/tk-flame.yml
 - ./includes/settings/tk-houdini.yml
 - ./includes/settings/tk-maya.yml
+- ./includes/settings/tk-blender.yml
 - ./includes/settings/tk-motionbuilder.yml
 - ./includes/settings/tk-nuke.yml
 - ./includes/settings/tk-photoshopcc.yml
@@ -43,6 +44,7 @@ engines:
   tk-flame: "@settings.tk-flame.shot"
   tk-houdini: "@settings.tk-houdini.shot"
   tk-maya: "@settings.tk-maya.shot"
+  tk-blender: "@settings.tk-blender.shot"
   tk-motionbuilder: "@settings.tk-motionbuilder.shot"
   tk-nuke: "@settings.tk-nuke.shot"
   tk-photoshopcc: "@settings.tk-photoshopcc.shot"
