--- a/env/includes/app_locations.yml
+++ b/env/includes/app_locations.yml
@@ -49,9 +49,12 @@ apps.tk-multi-loader2.location:
   name: tk-multi-loader2
   version: v1.22.1
 apps.tk-multi-publish2.location:
-  type: app_store
-  name: tk-multi-publish2
-  version: v2.6.3
+  #type: app_store
+  #name: tk-multi-publish2
+  #version: v2.6.3
+  type: git
+  path: https://github.com/c1112/tk-multi-publish2.git
+  version: v1.0.0
 apps.tk-multi-pythonconsole.location:
   type: app_store
   name: tk-multi-pythonconsole
