--- a/env/includes/settings/tk-multi-shotgunpanel.yml
+++ b/env/includes/settings/tk-multi-shotgunpanel.yml
@@ -113,6 +113,20 @@ settings.tk-multi-shotgunpanel.maya:
       filters: {}
   location: "@apps.tk-multi-shotgunpanel.location"
 
+# blender
+settings.tk-multi-shotgunpanel.blender:
+  action_mappings:
+    PublishedFile:
+    - actions: [publish_clipboard]
+      filters: {}
+    Task:
+    - actions: [assign_task, task_to_ip]
+      filters: {}
+    Version:
+    - actions: [quicktime_clipboard, sequence_clipboard, add_to_playlist]
+      filters: {}
+  location: "@apps.tk-multi-shotgunpanel.location"
+
 # nuke
 settings.tk-multi-shotgunpanel.nuke:
   action_mappings:
