--- a/core/templates.yml
+++ b/core/templates.yml
@@ -166,7 +166,7 @@ paths:
     #
     # These don't require the standard formatting (with definition and root_name) because they
     # will be set within each template that uses the alias.
-    shot_root: 01_projects/{Shot}
+    shot_root: 01_projects/{Sequence}/{Shot}
     asset_root: 04_assets/{sg_asset_type}/{Asset}
     #sequence_root: sequences/{Sequence}
 
