--- a/core/roots.yml
+++ b/core/roots.yml
@@ -45,7 +45,7 @@ primary:
 
     description: A top-level root folder for production data. Project folders
         will be created beneath this location.
-    shotgun_storage_id: 3 # primary - /mnt
+    shotgun_storage_id: 36 # common - /mnt/common
     default: true
 
 # ------------------------------------------------------------------------------
